# semantic-linker

./: .gitignore  README.md  pyproject.toml
semantic_linker/: __init__.py  embeddings.py  index.py  utils.py
tests/: test_dedupe.py  test_index.py  test_integration.py  test_match.py
